# human-ai-gateway

./: .env.example  .gateway-config.example.json  .gitignore  .user-widgets.json  AGENT_BRIEFING_TEMPLATE.md  AGENT_ORCHESTRATION_PATTERNS.md  BUILD-WINDOWS-TASK.md  CLAUDE.md  INTERNAL_TEST_BACKLOG.md  LICENSE  MIGRATION-TEST.md  MOBILE_MVP_PLAN.md  PRIVACY.md  README.md  RELEASE.md  SETUP-WINDOWS-DEV.md  WEBVIEW-PARITY-TDD.md  WINDOWS.md  board_routes.py  build-mac-app.sh  build-mac-pyinstaller.sh  build-sidecar.sh  build-win.bat  chat_routes.py  compact_summary.py  consent.html  cutout.py  cutout_local.py  daily_tasks_routes.py  day-paper.html  day.html  history.html  history_exporter.py  image_routes.py  index-paper.html  index.html  journal_routes.py  migration_plan.py  migration_routes.py  ocr.py  (+21 more)
installer/: gateway.iss
launchd/: ai.human-ai.daily-eval.plist  ai.human-ai.gateway.plist  ai.human-ai.pulse-refresh.plist  gw-cron.sh
mobile/: MIGRATION_PARITY_GUIDE.md  MOBILE_DESIGN_BRIEF.md  PARITY_LEDGER.md  PARITY_LOOP.md  PHASE_2_RUNBOOK.md  RUNBOOK.md  build-web.sh  mobile-api.js
protocols/: schedule.md
reference/: AGENT_CONTEXT.md  daily-tasks.md  标签聚合.md
scripts/: dedup_and_backfill_attachments.py  release-mac-local.sh  release-smoke-feedback-sink.sh  sync-cloud-to-yanpai.sh
shared/: aggregate.js  ai-tools.md  compact-ring.js  components.css  dialog.js  (+28 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: check-updates-now.toml
src-tauri/src/: lib.rs
(+127 files in other folders)
